# rocos-ecm

./: CMakeLists.txt  CMakePresets.json  EcVersion.txt  README.md
Doc/: log.xlsx
Main/Common/: EcDemoParms.cpp  EcDemoParms.h  EcDemoTimingTask.cpp  EcDemoTimingTask.h  EcFlags.cpp  EcFlags.h  EcLogging.cpp  EcLogging.h  EcNotification.cpp  EcNotification.h  EcSdoServices.cpp  EcSelectLinkLayer.cpp  EcSelectLinkLayer.h  EcSlaveInfo.cpp  EcSlaveInfo.h
Main/Common/Linux/: EcDemoMain.cpp  EcDemoPlatform.h  EcDemoTimingTaskPlatform.cpp  EcDemoTimingTaskPlatform.h
Main/ECM/: EcDemoApp.cpp  EcDemoApp.h  ecat_config.cpp  ecat_config_master.cpp
SDK/: Logging.h
SDK/INC/: ECMotionControl.h  EcError.h  EcEscReg.h  EcFeatures.h  EcInterfaceCommon.h  EcLink.h  EcLog.h  EcMaster.h  EcOs.h  EcRasError.h  EcRasServer.h  EcRasType.h  EcVersion.h  EthernetServices.h  OsCommon.h
SDK/INC/Linux/: EcOsPlatform.h
Sources/Common/: EcThread.cpp  EcTimer.cpp
Sources/LinkOsLayer/Linux/atemsys/: CMakeLists.txt
cmake/: rocos_ecm-config.cmake.in
config/: README.txt  ecat_config.yaml  ecat_config_1.yaml  ecat_config_2.yaml  ecat_config_4.yaml  ecat_config_sea.yaml  ecm.flagfile.in  eni_elmox2.xml  eni_sea.xml  kunwei.xml  sea.flagfile
include/: EcFlags.h
include/rocos_ecm/: EcFlags.h  ecatProcess.h  ecatProcessCommon.h  ecat_config.h  ecat_config_master.h  ecat_type.h
include/sdk/: selectLinkLayer.h
lib/LinkOsLayer/atemsys/: CMakeLists.txt  atemsys.c
scripts/: initECM.sh.in  rocos-ecm-pkexec  rocos-ecm.service  rocos-ecm.service.in  runECM.sh.in
src/: EcFlags.cpp  ecatProcess.cpp  ecatProcessCommon.cpp  ecatProcessMain.cpp  ecat_config.cpp  ecat_config_master.cpp  selectLinkLayer.cpp
test/: ecm_test.cpp  unit_test.cpp
